--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,11 @@
 :root {
-  font-family: monospace;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87);
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-    height: 100vh;
-  margin: 0 auto;
 }
